# docs/swagger.json
@@ -1151,6 +1151,12 @@
                         "in": "query"
                     },
                     {
+                        "type": "integer",
+                        "description": "category_id (int)",
+                        "name": "category_id",
+                        "in": "query"
+                    },
+                    {
                         "type": "string",
                         "description": "created_at_margin_top (format: 2006-01-02)",
                         "name": "created_at_margin_top",
@@ -1516,7 +1522,13 @@
                 "avatar": {
                     "type": "string"
                 },
+                "category_id": {
+                    "type": "integer"
+                },
                 "city": {
+                    "type": "string"
+                },
+                "code": {
                     "type": "string"
                 },
                 "country": {
@@ -1526,6 +1538,9 @@
                     "type": "string"
                 },
                 "email": {
+                    "type": "string"
+                },
+                "experience": {
                     "type": "string"
                 },
                 "fullname": {
